<resources>
    <string name="app_title">Знание Жизни</string>
    <string name="app_name">Знание Жизни</string>

    <string name="navigation_drawer_open">Открыть оглавление</string>
    <string name="navigation_drawer_close">Закрыть оглавление</string>

    <string name="app_mail">ceziawaiting@gmail.com</string>
    <string name="content">Содержание</string>
    <string name="part1">июнь 2012 года</string>
    <string name="part2">июль 2012 года</string>
    <string name="part3">август 2012 года</string>
    <string name="part4">сентябрь 2012 года</string>
    <string name="part5">октябрь 2012 года</string>

    <string name="action_share">Поделиться</string>
    <string name="action_shrift_up">Увеличить размер шрифта</string>
    <string name="action_shrift_down">Уменьшить размер шрифта</string>
    <string name="action_about">О программе</string>
    <string name="action_arrow_right">Переход к следующему фрагменту текста</string>
    <string name="action_arrow_left">Переход к предыдущему фрагменту текста</string>
    <string name="endbook">Закрыть книгу</string>

    <string name="app_description">
        Приложение "Знание Жизни" представляет собой электронную книгу-сборник
        оригинальных эзотерических текстов, относящихся к области живой этики самопознания и
        самосовершенствования. Цель их - расширить сознание человека и способствовать
        его дальнейшему духовному росту в новых условиях жизни.\nТексты были
        получены методом телепатии и радиэстезии.\nТексты приводятся в хронологическом порядке их получения.
    </string>

</resources>
