<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/content" android:checkableBehavior="single" >
        <item
                android:id="@+id/part1"
                android:icon="@drawable/ic_bookmark"
                android:title="@string/part1"/>
        <item
                android:id="@+id/part2"
                android:icon="@drawable/ic_bookmark"
                android:title="@string/part2"/>
        <item
                android:id="@+id/part3"
                android:icon="@drawable/ic_bookmark"
                android:title="@string/part3"/>
        <item
                android:id="@+id/part4"
                android:icon="@drawable/ic_bookmark"
                android:title="@string/part4"/>
        <item
                android:id="@+id/part5"
                android:icon="@drawable/ic_bookmark"
                android:title="@string/part5"/>
     </group>

    <group android:id="@+id/other" android:checkableBehavior="single" >
            <item
                    android:id="@+id/endbook"
                    android:icon="@drawable/ic_exit_to_app_black"
                    android:title="@string/endbook"
            />
    </group>

</menu>
